--- a/js基础知识/test.html
+++ b/js基础知识/test.html
@@ -8,6 +8,7 @@
 
 </body>
 <script>
-    var a = new WebSocket('ws://116.62.254.71:8081/api/collect/v1/socket/729/ldgw0m1t/websocket');
+    // var a = new WebSocket('ws://116.62.254.71:8081/api/collect/v1/socket/729/ldgw0m1t/websocket');
 </script>
+<script src="./reverse.js"></script>
 </html>
